# KDTA_ROS2

./: .gitignore  3-5. 프로젝트형 일경험 결과보고서.hwp  README.md
ROS2/: .bashrc  .vscode  build  install  interface_example  log  map.pgm  map.yaml  model.sdf  src
ROS2/interface_example/: package.xml
ROS2/log/: latest_build
ROS2/src/msg/: CMakeLists.txt  package.xml
ROS2/src/msg/include/msg/: m2sub.hpp  mpub.hpp  msub.hpp  mtsub.hpp  tpub.hpp
ROS2/src/msg/launch/: tmpubsub.launch.py
ROS2/src/msg/param/: turtlesim.yaml
ROS2/src/msg/src/: m2sub.cpp  message2_subscriber_class.cpp  message_publisher_class.cpp  message_subscriber_class.cpp  message_time_subscriber_class.cpp  mpub.cpp  msub.cpp  mtsub.cpp  time_publisher_class.cpp  tpub.cpp
opencv/ch02/: aprint.cpp  movewindows.cpp  windows.cpp
opencv/ch03/: basicOp.cpp  matOp1.cpp  matOp2.cpp  matOp3.cpp  matOp4.cpp  matOp5.cpp  rectOp.cpp  vecOp.cpp
opencv/ch04/: chTest.cpp  drawText.cpp  fileStorageReadTest.cpp  filestorageTest.cpp  keyboard.cpp  keyboard2.cpp  line.cpp  maskSetTo.cpp  mouseRGBPoint.cpp  mouseRGBPoint_myself.cpp  mouseTest.cpp  rectangleTest.cpp  trackBarTest.cpp  trackBarTest2.cpp  video.cpp
opencv/ch05/: brightness.cpp  histogram.cpp  histogramEqualization.cpp
opencv/ch06/: logical.cpp
opencv/ch07/: GaussianFilter.cpp  bilateralFilter.cpp  blur.cpp  filter2D.cpp  sharpen.cpp
opencv/ch08/: affine.cpp  affineRotation.cpp  perspectiveCard.cpp  perspectiveTransform.cpp
opencv/ch09/: canny.cpp  houghline.cpp  houghlineP.cpp
opencv/ch10/: color.cpp  inRange.cpp  splitmerge.cpp
opencv/ch11/: adaptiveThreshold.cpp  morphologyEx.cpp  (+1 more)
simple_pkg_cpp/: CMakeLists.txt
(+348 files in other folders)
